fix loading add data

--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -21,8 +21,8 @@
       />
     </div>
     <div class="col-md-4 mb-2">
-      <button (click)="onAddEmployee()" class="btn btn-primary btn-block">
-        Add Employee
+      <button (click)="onAddEmployee()" class="btn btn-secondary btn-block">
+        Tambah Employee
       </button>
     </div>
   </div>
