--- a/src/app/add-empployee/add-empployee.component.html
+++ b/src/app/add-empployee/add-empployee.component.html
@@ -111,7 +111,7 @@
         required
       ></textarea>
     </div>
-    <div class="mb-4 text-center" style="padding-bottom: 100px;">
+    <div class="mb-4 text-center" style="padding-bottom: 100px;"  *ngIf="!loading">
       <button type="submit" class="btn btn-secondary">Submit</button>
     </div>
   </form>
