--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<footer class="footer mt-5">
+  <div class="container text-center">
+    <p>&copy; 2024 Lukman Yudokusumo</p>
+  </div>
+</footer>
